# 234123

./: .gitignore  README.md
ex1/234123ex1/: CMakeLists.txt  Makefile  disable.c  enable.c  entry.S  exit.c  fork.c  get.c  hw1_syscalls.h  sched.c  sched.h  set.c
ex2/234123ex2/: CMakeLists.txt  Makefile  change.c  entry.S  exit.c  fork.c  getPolicy.c  hw2 dry.docx  hw2_syscalls.h  isChangeable.c  makeChangeable.c  sched.c  sched.h
ex2/234123ex2/tests/: test.txt  test3.c
ex2/234123ex2/tests/טסטים/: test.h  test.txt  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c
ex3/: CMakeLists.txt  results.csv  runscript-small
ex3/Code_Skeleton/: CMakeLists.txt  Game.cpp  Game.hpp  Headers.hpp  Job.hpp  PCQueue.hpp  Semaphore.hpp  Thread.hpp  main.cpp  makefile
ex3/Code_Skeleton/Part1/: PCQueue.hpp  PCQueue.hpp___jb_old___  Semaphore.hpp
ex3/Code_Skeleton/Part2/: Game.cpp  Game.hpp  Thread.hpp  main.cpp
ex4/: intercept.c
